# pdf2anki

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  WORKFLOW_README.md  documents.yaml  pr_body.md  pyproject.toml
.github/workflows/: build-deck-on-csv-change.yml  release.yml  test.yaml  test.yml
docs/: IMPLEMENTATION_PLAN.md  STRATEGIES.md
examples/: config.example.yaml  documents.example.yaml
notes/: basic.yaml  cloze.yaml
prompts/: cloze_definitions_v2.yaml  cloze_generation.yaml  figure_based.j2  key_points.j2  key_points.yaml  key_points_v2.yaml  reviewer_special.j2
prompts/templates/: cloze_definitions.j2
scripts/: generate_samples.py
src/pdf2anki/: __init__.py  build.py  chunking.py  cli.py  config.py  dedup.py  heuristics.py  ids.py  io.py  llm.py  pdf.py  preprocess.py  prompts.py  rag.py  strategy_registry.py  telemetry.py  templates.py  validate.py
src/pdf2anki/strategies/: __init__.py  base.py  cloze_definitions.py  figure_based.py  key_points.py
testbed/: config.yaml.bak
testbed/examples/: config.example.yaml
testbed/prompts/: cloze_definitions.j2  key_research_points.j2
testbed2/: config.yaml  documents.yaml
testbed2/prompts/: cloze_definitions.j2  reviewer.j2
tests/: __init__.py  test_chunking.py  test_chunking_entire.py  test_cli_plan_sample.py  test_config.py  test_heuristics.py  test_ids.py  test_reviewer.py  test_strategies.py  test_strategy_registry.py  test_templates.py
tools/: debug_cli.py
